--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 accompanistPagerIndicators = "0.32.0"
+accompanistSystemuicontroller = "<latest_version>"
+accompanistSystemuicontrollerVersion = "0.36.0"
 agp = "8.10.1"
 coilCompose = "2.4.0"
 foundation = "1.8.2"
@@ -15,6 +17,8 @@ composeBom = "2024.09.00"
 [libraries]
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPagerIndicators" }
 accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanistPagerIndicators" }
+accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontroller" }
+accompanist-systemuicontroller-v0360 = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontrollerVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-material3-window-size-class1 = { module = "androidx.compose.material3:material3-window-size-class" }
