--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="OPENWEATHER_API_KEY"
+            android:value="${OPENWEATHER_API_KEY}" />
+        <meta-data
+            android:name="ABSTRACT_API_KEY"
+            android:value="${ABSTRACT_API_KEY}" />
     </application>
 
 </manifest>
