--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -14,17 +16,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FireTV"
         tools:targetApi="31">
+
+        <!-- Removed LAUNCHER intent filter from MainActivity -->
         <activity
             android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FireTV" />
+
+        <!-- ChannelActivity temporarily set as the launcher -->
+        <activity
+            android:name=".PartyKeyActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FireTV">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ChannelActivity"/>
+
+        <activity android:name=".UserSelectActivity" />
+        <activity android:name=".VideoActivity" />
+
+        <!-- API keys -->
         <meta-data
             android:name="OPENWEATHER_API_KEY"
             android:value="${OPENWEATHER_API_KEY}" />
