--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -15,18 +19,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FireTV"
+        android:name=".FireTVApp"
+        android:usesCleartextTraffic="false"
         tools:targetApi="31">
 
         <!-- Removed LAUNCHER intent filter from MainActivity -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.FireTV" />
 
         <!-- ChannelActivity temporarily set as the launcher -->
         <activity
-            android:name=".PartyKeyActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FireTV">
@@ -36,11 +37,11 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ChannelActivity"/>
-
         <activity android:name=".UserSelectActivity" />
+        <activity android:name=".PartyKeyActivity" />
+        <activity android:name=".ChannelActivity" />
         <activity android:name=".VideoActivity" />
+        <activity android:name=".FireTVApp" />
 
         <!-- API keys -->
         <meta-data
